<resources>
    <string name="app_name">Task_firebase</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">NAME</string>
    <string name="enter_name">Enter name</string>
    <string name="age">AGE</string>
    <string name="enter_age">Enter age</string>
    <string name="mobile">MOBILE</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="gender">GENDER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood_grp">BLOOD GRP</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and conditions</string>
    <string name="submit">Submit</string>
    <string name="password">PASSWORD</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="enter_registered_email">Enter registered e-mail</string>
    <string name="conpwd">CONPWD</string>
    <string name="pwd">PWD</string>
    <string name="welcome">Welcome</string>
    <string name="e_mail">E-MAIL</string>
    <string name="enter_e_mail_id">Enter e-mail id</string>
</resources>